init website draft

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>Zemit - Pilot your content with a set of golden wings</title>
+		<meta name="description" content="Pilot your content with golden wings. Zemit, a content-management system built on top of PhalconPHP and AngularJS.">
         <link rel="icon" type="image/png" href="favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
@@ -181,7 +182,7 @@
 		    			<p>Built on top of <a href="//phalconphp.com/" target="_blank">PhalconPHP</a> and <a href="//angularjs.org/" target="_blank">AngularJS</a>.</p>
 		    		</div>
 		    		<div class="actions">
-		    			<a href="//github.com/zemit-official" target="_blank" class="btn btn-default">
+		    			<a href="https://github.com/zemit-official" target="_blank" class="btn btn-default">
 			    			<i class="fa fa-github"></i>
 			    			View on GitHub
 						</a>
