--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>Zemit - Pilot your content with a set of golden wings</title>
         <link rel="icon" type="image/png" href="favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -96,7 +96,7 @@
 			}
 			
 			#heading .details h1 em {
-				color: #C08B2F;
+				color: #91B867;
 				font-weight: 600;
 			}
 			
@@ -177,17 +177,17 @@
 		    			<img src="logo.png" />
 		    		</div>
 		    		<div class="details">
-		    			<h1>Pilot your content with a set of <em>golden wings</em>.</h1>
-		    			<p>Built on top of <a href="https://phalconphp.com/" target="_blank">PhalconPHP</a> and <a href="https://angularjs.org/" target="_blank">AngularJS</a>.</p>
+		    			<h1>No need for a <em>green thumb</em> to plant your content!</h1>
+		    			<p>Built on top of <a href="//phalconphp.com/" target="_blank">PhalconPHP</a> and <a href="//angularjs.org/" target="_blank">AngularJS</a>.</p>
 		    		</div>
 		    		<div class="actions">
-		    			<a href="https://github.com/zemit-official" target="_blank" class="btn btn-default">
+		    			<a href="//github.com/zemit-official" target="_blank" class="btn btn-default">
 			    			<i class="fa fa-github"></i>
 			    			View on GitHub
 						</a>
-			    		<a href="mailto:contact@zemit.com" target="_blank" class="btn btn-default btn-zemit">
-			    			<i class="fa fa-envelope"></i>
-			    			Get in touch
+			    		<a href="//try.zemit.com" target="_blank" class="btn btn-default btn-zemit">
+			    			<i class="fa fa-play"></i>
+			    			Try it out
 						</a>
 					</div>
 		    	</div>
