--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
 			    			<i class="fa fa-github"></i>
 			    			View on GitHub
 						</a>
-			    		<a href="//try.zemit.com" target="_blank" class="btn btn-default btn-zemit">
-			    			<i class="fa fa-play"></i>
-			    			Try it out
+			    		<a href="mailto:contact@zemit.com" target="_blank" class="btn btn-default btn-zemit">
+			    			<i class="fa fa-envelope"></i>
+			    			Get in touch
 						</a>
 					</div>
 		    	</div>
