--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 		    			<img src="logo.png" />
 		    		</div>
 		    		<div class="details">
-		    			<h1>Plant your content like<br />a touch of <em>green thumb!</em></h1>
+		    			<h1>Plant your content with<br />a <em>green thumb</em> touch!</h1>
 		    			<p>Built on top of <a href="//phalconphp.com/" target="_blank">PhalconPHP</a> and <a href="//angularjs.org/" target="_blank">AngularJS</a>.</p>
 		    		</div>
 		    		<div class="actions">
