--- a/index.html
+++ b/index.html
@@ -1,219 +1,16 @@
-
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Zemit - Pilot your content with a set of golden wings</title>
-		<meta name="description" content="Pilot your content with golden wings. Zemit, a content-management system built on top of PhalconPHP and AngularJS.">
-        <link rel="icon" type="image/png" href="favicon.png" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<meta name="apple-mobile-web-app-title" content="Zemit" />
-        <style>
-			html,
-			body {
-				font-size: 16px;
-				overflow: hidden;
-			}
-			
-			@media all and (max-width: 420px) {
-			  html, body {
-			      font-size: 14px;
-			  }
-			}
-			
-			#container {
-				-webkit-overflow-scrolling: touch;
-				overflow-y: auto;
-				overflow-x: hidden;
-				height: 100%;
-				width: 100%;
-				position: fixed;
-				/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+32,d1d1d1+100 */
-				background: #ffffff;
-				/* Old browsers */
-				background: -moz-linear-gradient(top, #ffffff 32%, #d1d1d1 100%);
-				/* FF3.6-15 */
-				background: -webkit-linear-gradient(top, #ffffff 32%, #d1d1d1 100%);
-				/* Chrome10-25,Safari5.1-6 */
-				background: linear-gradient(to bottom, #ffffff 32%, #d1d1d1 100%);
-				/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d1d1d1', GradientType=0);
-				/* IE6-9 */
-			}
-			
-			#videoContainer {
-				position: absolute;
-				width: 800px;
-				height: 499px;
-				top: 40vh;
-				right: calc(50% - 400px);
-				background: url('iphone-container.png');
-				z-index: 1;
-			}
-			
-			#videoContainer video {
-				height: 100%;
-			}
-			
-			#videoContainer video {
-				display: none;
-				transform: skew(60deg, -32deg) rotateZ(-0.8deg) translateX(146px) translateY(66px) scaleY(0.50) scaleX(0.83);
-				border: #999 solid 1px;
-			}
-			
-			#heading {
-			    max-width: calc(350px + 3rem);
-			    margin: 10vh auto 0 auto;
-			    position: relative;
-			    z-index: 100;
-			    text-align: center;
-			    padding: 0 1.5rem;
-			    box-sizing: border-box;
-			}
-			
-			#heading img {
-				height: 75px;
-			}
-			
-			#heading .details {
-				border-top: #ccc solid 1px;
-				margin-top: 1.5rem;
-			}
-			
-			#heading .details h1 {
-				text-transform: uppercase;
-				margin: 2rem 0 1rem 0;
-				font-size: 1.5rem;
-				line-height: 2rem;
-				font-weight: normal;
-				font-family: 'Roboto', serif;
-			}
-			
-			#heading .details h1 em {
-				color: #91B867;
-				font-weight: 600;
-			}
-			
-			#heading .actions {
-				margin-top: 1rem;
-			}
-			
-			#heading p a {
-				font-weight: bold;
-				color: black;
-			}
-			
-			.btn {
-				border-width: 2px;
-				background-color: transparent;
-				border-color: black;
-				color: black;
-			}
-			
-			.btn+.btn {
-				margin-left: 1rem;
-			}
-			
-			.btn:hover {
-				background-color: black;
-				color: white;
-				border-color: black;
-			}
-			
-			.btn-zemit {
-				background-color: #aa8fd8;
-				border-color: #aa8fd8;
-				color: white;
-			}
-			
-			.btn {
-				cursor: pointer;
-			}
-			
-			.btn .fa {
-				margin-right: 0.5em;
-			}
-			
-			@media all and (orientation: landscape) {
-				#heading {
-					left: calc(200px + 1.5rem);
-				}
-				#container > .content {
-				  right: 5vw;
-				  top: 0;
-				  width: 100%;
-				  height: 100%;
-				  position: absolute;
-				}
-			}
-			
-			@media all and (orientation: portrait) {
-				#videoContainer {
-					top: 50vh;
-				}
-				#heading img {
-					height: 50px;
-				}
-			}
-			
-			@media all and (max-width: 320px) {
-			  #videoContainer {
-					top: 65vh;
-				}
-			}
-        </style>
-    </head>
-    <body>
-    	<div id="container">
-    		<div class="content">
-		    	<div id="heading">
-		    		<div class="logo">
-		    			<img src="logo.png" />
-		    		</div>
-		    		<div class="details">
-		    			<h1>Plant your content with<br />a <em>green thumb</em> touch!</h1>
-		    			<p>Built on top of <a href="//phalconphp.com/" target="_blank">PhalconPHP</a> and <a href="//angularjs.org/" target="_blank">AngularJS</a>.</p>
-		    		</div>
-		    		<div class="actions">
-		    			<a href="https://github.com/zemit-official" target="_blank" class="btn btn-default">
-			    			<i class="fa fa-github"></i>
-			    			View on GitHub
-						</a>
-			    		<a href="mailto:contact@zemit.com" target="_blank" class="btn btn-default btn-zemit">
-			    			<i class="fa fa-envelope"></i>
-			    			Get in touch
-						</a>
-					</div>
-		    	</div>
-		    	<div id="videoContainer">
-					<video id="video" playsinline autoplay loop muted>
-					  <source src="layout-engine.mov" type="video/mp4" />
-					</video>
-				</div>
-			</div>
-		</div>
-		<script src="//code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-		<script type='text/javascript'>
-			(function($) {
-				$(document).ready(function() {
-					var $video = $('#video');
-					$video[0].addEventListener('ended', afterVideo, false);
-					$video[0].addEventListener('loadeddata', loadVideo, false);
-				    function afterVideo(event) {
-				        //$video.fadeOut(500);
-				    }
-				    function loadVideo(event) {
-				    	$video.fadeIn(250);
-				    }
-				});
-			})(jQuery);
-		</script>
-    </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Welcome to Vuetify 3</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
